add_executable(${PROJECT_NAME} chaos.cpp)

find_package(SDL2 REQUIRED)

if (SDL2_FOUND)
    include_directories(${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR}/src/include)
    target_include_directories(cH80s PUBLIC ${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR}/src/include)
    add_library(cpu STATIC cpu.cpp)
    add_library(rom STATIC rom.cpp)
    add_library(display STATIC display.cpp)
    add_library(data STATIC data.cpp)
    add_library(input STATIC input.cpp)
    add_library(timer STATIC timer.cpp)
    target_link_libraries(cH80s PRIVATE ${SDL2_LIBRARIES} cpu data display rom input timer mingw32 SDL2main SDL2)
endif ()